--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shiftly",
+  "name": "@statengine/shiftly",
   "version": "0.0.3",
   "description": "Calculate common public safety shift schedules.",
   "main": "lib/",
