--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@statengine/shiftly",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "Calculate common public safety shift schedules.",
   "main": "lib/",
   "scripts": {
     "lint": "node_modules/eslint/bin/eslint.js src/** test/**",
     "test": "mocha --compilers js:babel-core/register",
     "compile": "babel -d lib/ src/ --copy-files",
-    "prepublish": "npm run compile"
+    "prepare": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -28,19 +28,18 @@
   "homepage": "https://github.com/StatEngine/shiftly#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.0.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.11.1",
     "mocha": "^3.4.2"
   },
   "dependencies": {
-    "moment": "^2.18.1",
-    "moment-timezone": "^0.5.13"
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21"
   }
 }
