--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@statengine/shiftly",
-  "version": "0.0.25",
+  "version": "0.0.26",
   "description": "Calculate common public safety shift schedules.",
   "main": "lib/",
   "scripts": {
     "lint": "node_modules/eslint/bin/eslint.js src/** test/**",
-    "test": "mocha --compilers js:babel-core/register",
+    "test": "mocha --compilers js:@babel/register",
     "compile": "babel -d lib/ src/ --copy-files",
     "prepare": "npm run compile"
   },
@@ -27,9 +27,11 @@
   },
   "homepage": "https://github.com/StatEngine/shiftly#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "chai": "^4.0.2",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "chai": "^4.2.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-plugin-import": "^2.14.0",
