update packages, fix linting issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "import/no-extraneous-dependencies": 0,
     "import/no-unresolved": [2, { "ignore": ["electron"] }],
     "linebreak-style": 0,
+    "max-classes-per-file": off,
   },
   "plugins": [
       "import",
