--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/",
   "scripts": {
     "lint": "node_modules/eslint/bin/eslint.js src/** test/**",
-    "test": "mocha --compilers js:@babel/register",
+    "test": "mocha --require @babel/register",
     "compile": "babel -d lib/ src/ --copy-files",
     "prepare": "npm run compile"
   },
@@ -27,21 +27,21 @@
   },
   "homepage": "https://github.com/StatEngine/shiftly#readme",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/register": "^7.0.0",
-    "chai": "^4.2.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-react": "^7.11.1",
-    "mocha": "^5.2.0"
+    "@babel/cli": "^7.12.17",
+    "@babel/core": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/register": "^7.12.13",
+    "chai": "^4.3.0",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-react": "^7.22.0",
+    "mocha": "^8.3.0"
   },
   "dependencies": {
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21"
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33"
   }
 }
