--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,14 @@ cache:
   directories:
   - node_modules
 node_js:
-  - '8'
-  - '6'
+  - '14'
 
 env:
   - JOB=test
 
 script:
   - 'if [ "$JOB" = "test" ]; then npm test; fi'
-  - 'if [ "$JOB" = "lint" ]; then ./node_modules/eslint/bin/eslint.js .; fi'
+  - 'if [ "$JOB" = "lint" ]; then npm run lint; fi'
 
 matrix:
   fast_finish: true
